Feat: 로컬 캐시에 TTL 적용
로컬 캐시에 TTL 적용
카페인 라이브러리 사용

Related to: #99

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    //  Caffeine
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.4'
 }
 
 tasks.named('test') {
