--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,6 +51,12 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew bootJar
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       # Spring 어플리케이션 Docker Image 빌드
       - name: Build Docker Image For Spring
         run: |
