--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,12 +57,26 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
-      # Spring 어플리케이션 Docker Image 빌드
-      - name: Build Docker Image For Spring
-        run: |
-          docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_PASSWORD }}
-          docker build --platform linux/arm64 -t ${{ env.DOCKER_USERNAME }}/neticket-image .
-          docker push ${{ env.DOCKER_USERNAME }}/neticket-image
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          platforms: linux/arm64,linux/amd64
+          tags: ${{ env.DOCKER_USERNAME }}/neticket-image
+
+#      # Spring 어플리케이션 Docker Image 빌드
+#      - name: Build Docker Image For Spring
+#        run: |
+#          docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_PASSWORD }}
+#          docker build --platform linux/arm64 -t ${{ env.DOCKER_USERNAME }}/neticket-image .
+#          docker push ${{ env.DOCKER_USERNAME }}/neticket-image
 
       # 디렉토리 생성
       - name: Make Directory
