--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,18 +51,22 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew bootJar
 
+      # Docker Buildx 설치
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      # QEMU Emulator 설치
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
+      # Docker Hub Login
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
 
+      # Docker Image Build and Push (linux/arm64,linux/amd64)
       - name: Build and push Docker Image
         uses: docker/build-push-action@v2
         with:
@@ -70,13 +74,6 @@ jobs:
           push: true
           platforms: linux/arm64,linux/amd64
           tags: ${{ env.DOCKER_USERNAME }}/neticket-image
-
-#      # Spring 어플리케이션 Docker Image 빌드
-#      - name: Build Docker Image For Spring
-#        run: |
-#          docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_PASSWORD }}
-#          docker build --platform linux/arm64 -t ${{ env.DOCKER_USERNAME }}/neticket-image .
-#          docker push ${{ env.DOCKER_USERNAME }}/neticket-image
 
       # 디렉토리 생성
       - name: Make Directory
@@ -90,6 +87,7 @@ jobs:
       - name: Copy script
         run: cp ./scripts/*.sh ./deploy
 
+      # Zip 압축
       - name: Make zip file
         run: zip -r ./$IMAGE_TAG.zip ./deploy
         shell: bash
@@ -102,6 +100,7 @@ jobs:
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      # Zip S3 Upload
       - name: Upload to S3
         run: aws s3 cp --region ap-northeast-2 ./$IMAGE_TAG.zip s3://jinhyeokbucket95/
 
